--- a/joelang.cabal
+++ b/joelang.cabal
@@ -30,9 +30,12 @@ library
       AST.Expression
       AST.Token
       AST.Types
+      JIR
+      JIR.Type
       Lib
       LLIR
       LLVM
+      Prim
   other-modules:
       Paths_joelang
   hs-source-dirs:
