--- a/package.yaml
+++ b/package.yaml
@@ -23,8 +23,11 @@ dependencies:
 - base >= 4.7 && < 5
 - containers
 - ilist
+- lens
 - llvm-hs-pretty
 - llvm-hs-pure
+- monad-loops
+- mtl
 - text
 
 library:
