--- a/joelang.cabal
+++ b/joelang.cabal
@@ -27,6 +27,7 @@ library
   exposed-modules:
       Joe.LLIR
       Joe.LLVM
+      Joe.Passes.LowerLambdas
       Joe.Passes.Monad
       Joe.Passes.RemoveUnusedGlobals
       Joe.Passes.StaticFunctionTemplateElimination
@@ -44,6 +45,7 @@ library
     , llvm-hs-pure
     , monad-loops
     , mtl
+    , pretty-simple
     , text
   default-language: Haskell2010
 
@@ -64,6 +66,7 @@ executable joelang-exe
     , llvm-hs-pure
     , monad-loops
     , mtl
+    , pretty-simple
     , text
   default-language: Haskell2010
 
@@ -85,5 +88,6 @@ test-suite joelang-test
     , llvm-hs-pure
     , monad-loops
     , mtl
+    , pretty-simple
     , text
   default-language: Haskell2010
