--- a/joelang.cabal
+++ b/joelang.cabal
@@ -30,6 +30,7 @@ library
       Joe.Passes.LowerLambdas
       Joe.Passes.Monad
       Joe.Passes.RemoveUnusedGlobals
+      Joe.Passes.ScopeElimination
       Joe.Passes.StaticFunctionTemplateElimination
       Joe.Prim
   other-modules:
