--- a/joelang.cabal
+++ b/joelang.cabal
@@ -27,6 +27,7 @@ library
   exposed-modules:
       Joe.LLIR
       Joe.LLVM
+      Joe.Parser
       Joe.Passes.LowerLambdas
       Joe.Passes.Monad
       Joe.Passes.RemoveUnusedGlobals
@@ -45,6 +46,7 @@ library
     , llvm-hs-pure
     , monad-loops
     , mtl
+    , parsec
     , pretty-simple
     , text
   default-language: Haskell2010
@@ -65,6 +67,7 @@ executable joelang-exe
     , llvm-hs-pure
     , monad-loops
     , mtl
+    , parsec
     , pretty-simple
     , text
   default-language: Haskell2010
@@ -88,6 +91,7 @@ test-suite joelang-test
     , llvm-hs-pure
     , monad-loops
     , mtl
+    , parsec
     , pretty-simple
     , text
   default-language: Haskell2010
